Update pom.xml, remove illegal access property